[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "VAST_AI"
version = "0.0.5"
authors = [
  { name="Lewis Won", email="lwon3@gatech.edu" },
]
description = "Verifiable analysis of structured text"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/wonlewis/VAST-AI"
Issues = "https://github.com/wonlewis/VAST-AI/issues"